--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.109",
+    "@types/node": "^18.11.9",
     "esbuild": "^0.15.16"
   }
 }
